--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "vcards-js": "^2.10.0",
     "vcf": "^2.1.2",
     "yarn": "^1.22.22"
   },
